Tweak styling of 2FA login pages to look more like regular login page

--- a/locale/en_US/LC_MESSAGES/django.po
+++ b/locale/en_US/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-11 16:49+0000\n"
+"POT-Creation-Date: 2021-02-11 17:00+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -6319,7 +6319,7 @@ msgstr ""
 msgid "Use Device"
 msgstr ""
 
-msgid "Open the one-time password application with which you configured two-factor authentication on your account and enter the code below to verify your identity."
+msgid "Open the one-time password application with which you setup two-factor authentication on your account and enter the code below to verify your identity."
 msgstr ""
 
 msgid "6-digit code"
