--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-11 17:23+0000\n"
+"POT-Creation-Date: 2021-02-11 18:54+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Hudson Brendon <hudson.brendon@ilhasoft.com.br>, 2020\n"
 "Language-Team: Russian (https://www.transifex.com/rapidpro/teams/226/ru/)\n"
@@ -9598,7 +9598,7 @@ msgstr ""
 
 #, fuzzy
 #| msgid "Two Factor Authentication"
-msgid "Two-factor Authentication is <b>disabled</b>."
+msgid "Two-factor authentication is <b>disabled</b>."
 msgstr "Двухфакторная аутентификация"
 
 msgid "Two-factor authentication is currently enabled for your login. Below are your backup tokens which you can use if you lose access to the device with which you setup two-factor authentication. Each token can only be used once and tokens which have already been used are showed with a line through them. You should record these tokens in a secure place."
@@ -9614,7 +9614,7 @@ msgstr "Генерировать Резервные Токены"
 
 #, fuzzy
 #| msgid "Two Factor Authentication"
-msgid "Two Factor Authentication is <b>enabled</b>."
+msgid "Two-factor authentication is <b>enabled</b>."
 msgstr "Двухфакторная аутентификация"
 
 #, fuzzy
