--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-18 12:42+0000\n"
+"POT-Creation-Date: 2021-02-18 13:56+0000\n"
 "PO-Revision-Date: 2014-09-24 19:56+0000\n"
 "Last-Translator: TextIt <info@textit.in>\n"
 "Language-Team: Spanish (http://www.transifex.com/projects/p/textit/language/es/)\n"
@@ -5034,6 +5034,11 @@ msgstr "El enlace de su invitación ha vencido. Por favor, contacte al administr
 
 msgid "Join"
 msgstr "Participar"
+
+#, fuzzy
+#| msgid "Your invitation link has expired. Please contact your organization administrator."
+msgid "You are the only administrator on this workspace. Please add other workspace administrators first."
+msgstr "El enlace de su invitación ha vencido. Por favor, contacte al administrador de su organización."
 
 #, fuzzy
 #| msgid "Invalid claim code, please check and try again."
