Prevent duplicate emails invites

--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-18 16:52+0000\n"
+"POT-Creation-Date: 2021-02-23 15:08+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Jesus EKIE <jesus@fehudigital.com>, 2020\n"
 "Language-Team: French (https://www.transifex.com/rapidpro/teams/226/fr/)\n"
@@ -3525,6 +3525,11 @@ msgstr "L'un des e-mails que vous avez inscrits est invalide."
 #, fuzzy
 #| msgid "One of the emails you entered is invalid."
 msgid "One of the emails you entered has an existing user on the workspace."
+msgstr "L'un des e-mails que vous avez inscrits est invalide."
+
+#, fuzzy
+#| msgid "One of the emails you entered is invalid."
+msgid "One of the emails you entered is duplicated."
 msgstr "L'un des e-mails que vous avez inscrits est invalide."
 
 #, fuzzy
