--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-18 16:52+0000\n"
+"POT-Creation-Date: 2021-02-23 15:08+0000\n"
 "PO-Revision-Date: 2014-04-14 20:37+0000\n"
 "Last-Translator: produtos <produtos.ti@takenet.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/projects/p/textit/language/pt_BR/)\n"
@@ -4671,6 +4671,11 @@ msgstr "Um dos e-mails que você digitou é inválido."
 #, fuzzy
 #| msgid "One of the emails you entered is invalid."
 msgid "One of the emails you entered has an existing user on the workspace."
+msgstr "Um dos e-mails que você digitou é inválido."
+
+#, fuzzy
+#| msgid "One of the emails you entered is invalid."
+msgid "One of the emails you entered is duplicated."
 msgstr "Um dos e-mails que você digitou é inválido."
 
 #, fuzzy
