--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-18 16:52+0000\n"
+"POT-Creation-Date: 2021-02-23 21:05+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Jesus EKIE <jesus@fehudigital.com>, 2020\n"
 "Language-Team: French (https://www.transifex.com/rapidpro/teams/226/fr/)\n"
@@ -4348,6 +4348,17 @@ msgstr "Fonctionne dans n'importe quel pays et utilise le forfait de téléphoni
 msgid "API Channels"
 msgstr "Canaux API"
 
+msgid "More"
+msgstr "Plus"
+
+#, python-format
+msgid ""
+"\n"
+"          The channels above are those supported in your region. Click <a class=\"inline\" href=\"%(claim_all_url)s\"> here</a> to see all possible channel types.\n"
+"\n"
+"        "
+msgstr ""
+
 msgid "Enter your credentials to add your number."
 msgstr "Entrez vos informations d'identification pour ajouter votre numéro."
 
@@ -7557,9 +7568,6 @@ msgid ""
 msgstr ""
 "\n"
 "Vous n'êtes pas obligés, mais il est préférable que ceux-ci soient visualiser dans l'ordre puisqu'ils s'appuient les uns sur les autres asu cours de votre progréssion. "
-
-msgid "More"
-msgstr "Plus"
 
 #, python-format
 msgid ""
