--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-18 16:52+0000\n"
+"POT-Creation-Date: 2021-02-23 21:05+0000\n"
 "PO-Revision-Date: 2014-04-14 20:37+0000\n"
 "Last-Translator: produtos <produtos.ti@takenet.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/projects/p/textit/language/pt_BR/)\n"
@@ -5725,6 +5725,17 @@ msgstr ""
 msgid "API Channels"
 msgstr "Transmissor"
 
+msgid "More"
+msgstr "Mais"
+
+#, python-format
+msgid ""
+"\n"
+"          The channels above are those supported in your region. Click <a class=\"inline\" href=\"%(claim_all_url)s\"> here</a> to see all possible channel types.\n"
+"\n"
+"        "
+msgstr ""
+
 msgid "Enter your credentials to add your number."
 msgstr ""
 
@@ -9625,9 +9636,6 @@ msgid ""
 msgstr ""
 "\n"
 "Não é necessário, mas é melhor se você assisti-los em ordem, uma vez que construirão sobre os outros à medida que você avançar."
-
-msgid "More"
-msgstr "Mais"
 
 #, fuzzy, python-format
 msgid ""
