--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-18 16:52+0000\n"
+"POT-Creation-Date: 2021-02-23 21:05+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Hudson Brendon <hudson.brendon@ilhasoft.com.br>, 2020\n"
 "Language-Team: Russian (https://www.transifex.com/rapidpro/teams/226/ru/)\n"
@@ -5259,6 +5259,17 @@ msgstr "Работает в любой стране и использует та
 msgid "API Channels"
 msgstr "Каналы API"
 
+msgid "More"
+msgstr "Больше"
+
+#, python-format
+msgid ""
+"\n"
+"          The channels above are those supported in your region. Click <a class=\"inline\" href=\"%(claim_all_url)s\"> here</a> to see all possible channel types.\n"
+"\n"
+"        "
+msgstr ""
+
 msgid "Enter your credentials to add your number."
 msgstr ""
 
@@ -10085,9 +10096,6 @@ msgstr ""
 "      Это необязательно, но лучше смотреть видеоролики по порядку, так как они отталкиваются друг от друга в порядке очередности.\n"
 "\n"
 "    "
-
-msgid "More"
-msgstr "Больше"
 
 #, python-format
 msgid ""
